readme before run